--- a/BlazorWebAssembly.styles.css
+++ b/BlazorWebAssembly.styles.css
@@ -1,19 +1,19 @@
 /* /Shared/MainLayout.razor.rz.scp.css */
-.page[b-9wcwp57ndo] {
+.page[b-tythk0fk5s] {
     position: relative;
     display: flex;
     flex-direction: column;
 }
 
-.main[b-9wcwp57ndo] {
+.main[b-tythk0fk5s] {
     flex: 1;
 }
 
-.sidebar[b-9wcwp57ndo] {
+.sidebar[b-tythk0fk5s] {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
 }
 
-.top-row[b-9wcwp57ndo] {
+.top-row[b-tythk0fk5s] {
     background-color: #f7f7f7;
     border-bottom: 1px solid #d6d5d5;
     justify-content: flex-end;
@@ -22,88 +22,88 @@
     align-items: center;
 }
 
-    .top-row[b-9wcwp57ndo]  a, .top-row .btn-link[b-9wcwp57ndo] {
+    .top-row[b-tythk0fk5s]  a, .top-row .btn-link[b-tythk0fk5s] {
         white-space: nowrap;
         margin-left: 1.5rem;
     }
 
-    .top-row a:first-child[b-9wcwp57ndo] {
+    .top-row a:first-child[b-tythk0fk5s] {
         overflow: hidden;
         text-overflow: ellipsis;
     }
 
 @media (max-width: 640.98px) {
-    .top-row:not(.auth)[b-9wcwp57ndo] {
+    .top-row:not(.auth)[b-tythk0fk5s] {
         display: none;
     }
 
-    .top-row.auth[b-9wcwp57ndo] {
+    .top-row.auth[b-tythk0fk5s] {
         justify-content: space-between;
     }
 
-    .top-row a[b-9wcwp57ndo], .top-row .btn-link[b-9wcwp57ndo] {
+    .top-row a[b-tythk0fk5s], .top-row .btn-link[b-tythk0fk5s] {
         margin-left: 0;
     }
 }
 
 @media (min-width: 641px) {
-    .page[b-9wcwp57ndo] {
+    .page[b-tythk0fk5s] {
         flex-direction: row;
     }
 
-    .sidebar[b-9wcwp57ndo] {
+    .sidebar[b-tythk0fk5s] {
         width: 250px;
         height: 100vh;
         position: sticky;
         top: 0;
     }
 
-    .top-row[b-9wcwp57ndo] {
+    .top-row[b-tythk0fk5s] {
         position: sticky;
         top: 0;
         z-index: 1;
     }
 
-    .main > div[b-9wcwp57ndo] {
+    .main > div[b-tythk0fk5s] {
         padding-left: 2rem !important;
         padding-right: 1.5rem !important;
     }
 }
 /* /Shared/NavMenu.razor.rz.scp.css */
-.navbar-toggler[b-q8yp7cur1t] {
+.navbar-toggler[b-gpywbifaxj] {
     background-color: rgba(255, 255, 255, 0.1);
 }
 
-.top-row[b-q8yp7cur1t] {
+.top-row[b-gpywbifaxj] {
     height: 3.5rem;
     background-color: rgba(0,0,0,0.4);
 }
 
-.navbar-brand[b-q8yp7cur1t] {
+.navbar-brand[b-gpywbifaxj] {
     font-size: 1.1rem;
 }
 
-.oi[b-q8yp7cur1t] {
+.oi[b-gpywbifaxj] {
     width: 2rem;
     font-size: 1.1rem;
     vertical-align: text-top;
     top: -2px;
 }
 
-.nav-item[b-q8yp7cur1t] {
+.nav-item[b-gpywbifaxj] {
     font-size: 0.9rem;
     padding-bottom: 0.5rem;
 }
 
-    .nav-item:first-of-type[b-q8yp7cur1t] {
+    .nav-item:first-of-type[b-gpywbifaxj] {
         padding-top: 1rem;
     }
 
-    .nav-item:last-of-type[b-q8yp7cur1t] {
+    .nav-item:last-of-type[b-gpywbifaxj] {
         padding-bottom: 1rem;
     }
 
-    .nav-item[b-q8yp7cur1t]  a {
+    .nav-item[b-gpywbifaxj]  a {
         color: #d7d7d7;
         border-radius: 4px;
         height: 3rem;
@@ -112,22 +112,22 @@
         line-height: 3rem;
     }
 
-.nav-item[b-q8yp7cur1t]  a.active {
+.nav-item[b-gpywbifaxj]  a.active {
     background-color: rgba(255,255,255,0.25);
     color: white;
 }
 
-.nav-item[b-q8yp7cur1t]  a:hover {
+.nav-item[b-gpywbifaxj]  a:hover {
     background-color: rgba(255,255,255,0.1);
     color: white;
 }
 
 @media (min-width: 641px) {
-    .navbar-toggler[b-q8yp7cur1t] {
+    .navbar-toggler[b-gpywbifaxj] {
         display: none;
     }
 
-    .collapse[b-q8yp7cur1t] {
+    .collapse[b-gpywbifaxj] {
         /* Never collapse the sidebar for wide screens */
         display: block;
     }
